@@ -11,6 +11,7 @@ EBUILD tlp-0.3.8.1.ebuild 5718 SHA256 f10981957ea2d21be73723804e77e495c3d32ba424
 EBUILD tlp-0.3.9.900_pre20130730.ebuild 5964 SHA256 164218f7c504358616af1a51160914bab6fd603694b9be0516cac43ed0688479 SHA512 71e59490ff74a29b5820de98176f66f1a4bec3707949e64060a9c266419e5f0859d6c43c2bd62f5b1ae9a36e5f657bd02d5ed99360313ae97609551546666b74 WHIRLPOOL 01912535116034423c7003e576f41c8d1a736c43edfe0b6a86d039ec92cf4e735a068ef3a64e284114d5819b940a880a37a445d3e131dabbe01e0b07bd3f80ba
 EBUILD tlp-0.3.9.ebuild 5752 SHA256 141c140eff808f8d39981f3d1b46e216a807f76ef1a36ff62d5658c816027983 SHA512 9f3cf9d7fef6c65d3a7ceaf829cdf5f39cb43cc78ac7b8238fa5610fb2a2fd62966c9ac6d5f03395bf0a4c618ae472cff41960e839029602ca3f054685592326 WHIRLPOOL eec311643fe71a51243e8049ae821894a71e2bd161733091572e2f6b69717250e99f4434a65088e9137465d690a350aed5adf4e773490fefec1473a70a385ca7
 EBUILD tlp-0.4-r1.ebuild 6379 SHA256 3b25dd526f38530cbdad1fbc2b04cbf7200aef5de5f84127a90de827ee4aa268 SHA512 f29df7ed230dec5c9c01057cbad3253b81b6ae3ed2dc2bc444c819812fdd704c118817b2b8a39093bc8a73d075a9e5a247545431aa92abe21e13ee750013ac09 WHIRLPOOL 5359a8db9d12e81e2db512a5fc683ec7020a93120622b695fcac000226b0510889db93b678c21b8dd47d0e99295648d9cf205a88d34e5fe5c5d268172776e375
+EBUILD tlp-0.4.1.ebuild 6340 SHA256 502af5a894e23dbe0b9ba14eaa7d7319e837fa156690866318920e94ca70632d SHA512 fe4a0324d85f9c1b46d0b237c904f3f7c9b6d85978a7ec17260d4738a76ce6e7e6314f903a31ae5ddb16181964b1d142c9777e0bb577ac8b95ac87a9518da11c WHIRLPOOL 97a96b5d8d56850622ec89d1e2c8311127e95c343be87919ae74bfbfa079fb4194d649a75132e33ef4426c3429ef123f11036c2ceee565ee426880106a25a8eb
 EBUILD tlp-0.4.ebuild 5837 SHA256 ce9bb9fd43023fe360f3821cbd48062b56e2cdc748d1bcbb392e6b0baad0626e SHA512 ec101176557fb9bd849523d32f589d1aeadf33d5d527ec18e5c773a6deb04e31e328c917294588fae7edc0276cbcc6e447bc0da0464251fa3e38979647b6bdb6 WHIRLPOOL 95518bd05acef1319aef51b3b03ed89b912c3325a13c54f7247a3a4ed38def1196b6ba73038ed1b9c6aa0272d4944925abe6da36b40beb79654f801b56998706
-MISC ChangeLog 8141 SHA256 24e3c8ce30db49ea4226bc859453e92f99eef7fa1165c5c61c9c0511d59829f2 SHA512 b40b6f4843757ce77200f3f9c02dd6b61d8127dc0a928495baa35785eadb609c238fbd718fcfa52460c75c141644cafca3d130aef064d16d8c1fadf48c7bbc2b WHIRLPOOL 3bac4410aba1a3f3cd26cfdc2e1c3c9a7f22262378d9a4277d98580de0e85709f2ec24fa5e92ba9e901f1de09bf5e1157c0d788b7201c8095913f7665f882e74
+MISC ChangeLog 8293 SHA256 7976abc6dfa87dce8d15e804b9be2712a759bac7e670a9a2a98f54c90fe64420 SHA512 506d0853dc0141f27e0d0db039e9c4d4d71796e8fbf8faab83d70a68da677d30006315f33250b24417cc9848dfb75048bb0944f79388a62e6e9790dab3f5a0ca WHIRLPOOL 57ad4d2990b9c9705eea67140ef09e1ad705cd0a066b5a4dce5559108477f9bcfb71aef83a4ad7ab2373e3fecf7c2da9ca69f72bb382463a19e3abed26b1aa92
 MISC metadata.xml 2020 SHA256 5545a9a37c988b5d594de8a21dd8489f8ac2d2ef74a85a878eb643c045d61e09 SHA512 cfa0c05eaa4484bfa6efe17d6a7b40809eb447e7f41952d891ca8558e8de3e42b62f2baff108de04406b34b2ac5c43267f8d25a5c0790ab9bf2395be6a1eece8 WHIRLPOOL f160027e224ed29cb5f0ddb6c6d87f8764e7bafb115e9b6d2956fd35b23a5032f16d21a3d28f77f2a1761eb46d2790b2029533589bc0c7762331952c6eb51abf
